# CPP-Minecraft-Clone

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  axis.cpp  axis.h  camera.h  draw.h  easylogging.config  install.bat  launch.bat  main.cpp  project.clang-tidy  scene.cpp  scene.h  shader.h
documentation/html/: annotated.html  block_8h_source.html  camera_8h_source.html  chunks_8h_source.html  class_chunk-members.html  class_chunk.html  class_chunk_manager-members.html  class_chunk_manager.html  class_cube_map-members.html  class_cube_map.html  class_engine-members.html  class_engine.html  class_entity-members.html  class_entity.html  class_model-members.html  class_model.html  class_model_database-members.html  class_model_database.html  class_player-members.html  class_player.html  class_shader-members.html  class_shader.html  class_skybox-members.html  class_skybox.html  class_sound_database-members.html  class_sound_database.html  class_texture2_d-members.html  class_texture2_d.html  class_texture_database-members.html  class_texture_database.html  class_texture_interface-members.html  class_texture_interface.html  class_transform-members.html  class_transform.html  class_view_frustum-members.html  class_view_frustum.html  class_world_info-members.html  class_world_info.html  classes.html  doxygen.css  (+38 more)
documentation/html/search/: all_0.html  all_0.js  all_1.html  all_1.js  all_10.html  all_10.js  all_2.html  all_2.js  all_3.html  all_3.js  all_4.html  all_4.js  all_5.html  all_5.js  all_6.html  all_6.js  all_7.html  all_7.js  all_8.html  all_8.js  all_9.html  all_9.js  all_a.html  all_a.js  all_b.html  all_b.js  all_c.html  all_c.js  all_d.html  all_d.js  all_e.html  all_e.js  all_f.html  all_f.js  classes_0.html  classes_0.js  classes_1.html  classes_1.js  classes_2.html  classes_2.js  (+43 more)
documentation/latex/: annotated.tex  class_chunk.tex  class_chunk_manager.tex  class_cube_map.eps  class_cube_map.tex  class_engine.tex  class_entity.eps  class_entity.tex  class_model.tex  class_model_database.tex  class_player.tex  class_skybox.eps  class_skybox.tex  class_sound_database.tex  class_texture2_d.eps  class_texture2_d.tex  class_texture_database.tex  class_texture_interface.eps  class_texture_interface.tex  class_transform.tex  class_view_frustum.tex  class_world_info.tex  hierarchy.tex  md__r_e_a_d_m_e.tex  namespace_model_type.tex  namespaces.tex  refman.tex  struct_block_file_data.tex  struct_bounding_box.tex  struct_camera.tex  struct_config.tex  struct_mesh.tex  struct_plane.tex  struct_vertex.tex
include/: block.h  camera.h  chunks.h  engine.h  engine_constants.h  entity.h  frustum.h  mesh.h  model.h  model_database.h  objloader.h  player.h  shader.h  sound_database.h  texture.h  texture_database.h  transform.h  world.h
libs/: FastNoise.cpp  easylogging++.cpp  easylogging++.h  tiny_obj_loader.h
resources/blocks/: bedrock.block  dirt.block  dirt_grass.block  gold.block  oak_leaves.block  oak_log.block  player.block  ruby.block  skybox.block  stone.block  water.block
resources/shaders/: AxisFragmentShader.glsl  AxisVertexShader.glsl  BasicFragmentShader.fs  BasicLightingFragmentShader.glsl  BasicLightingVertexShader.glsl  BasicVertexShader.glsl  BasicVertexShader.vs  DebugDepthQuadFragment.glsl  DepthFragmentShader.glsl  DepthVertexShader.glsl  GridFragmentShader.glsl  GridVertexShader.glsl  GridVertexShader.vs  L8vertexshader.glsl  LightVertexShader.glsl  ModelFragmentShader.glsl  ModelFragmentShaderCubeMap.glsl  ModelVertexShader.glsl  SphereFragmentShader.glsl  SphereVertexShader.glsl  basicvertexshader.glsl  dynamicshapefs.glsl
src/: camera.cpp  chunks.cpp  engine.cpp  entity.cpp  frustum.cpp  model.cpp  model_database.cpp  player.cpp  sound_database.cpp  texture.cpp  texture_database.cpp
